<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".auth.signup.InsertUserInfoFragment">

    <TableLayout
        android:id="@+id/tableLayout_id_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" >
        <!--        android:background="@color/black"-->
        <!--        android:padding="1dp"-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="계정 정보를 입력해주세요"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="* 는 필수 입력란입니다."
            android:textSize="12sp" />

        <TextView
            android:layout_margin="25sp" />

        <TableRow
            android:gravity="center">
            <EditText
                android:id="@+id/join_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/id_hint"
                android:inputType="textPersonName" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="*" />
        </TableRow>

        <TableRow
            android:gravity="center">
            <!-- error message - id -->
            <TextView
                android:id="@+id/error_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/red_error"
                android:text="" />
        </TableRow>

        <TableRow
            android:gravity="center">
            <EditText
                android:layout_margin="1dp"
                android:id="@+id/join_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="이메일(example@example.com)"
                android:inputType="textEmailAddress" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=" " />
        </TableRow>

        <TableRow
            android:gravity="center">
            <!-- error message - nickname -->
            <TextView
                android:id="@+id/error_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/purple_700"
                android:text="@string/join_guide_email" />
        </TableRow>

        <TableRow
            android:gravity="center">
            <EditText
                android:layout_margin="1dp"
                android:id="@+id/join_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="*" />
        </TableRow>

        <TableRow
            android:gravity="center">
            <!-- error message - pw -->
            <TextView
                android:id="@+id/error_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/red_error"
                android:text="" />
        </TableRow>

        <TableRow
            android:gravity="center">
            <EditText
                android:layout_margin="1dp"
                android:id="@+id/join_pw_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="비밀번호 확인"
                android:inputType="textPassword" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="*" />
        </TableRow>

        <TableRow
            android:gravity="center">
            <!-- error message - pw check -->
            <TextView
                android:id="@+id/error_pwch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/red_error"
                android:text="" />
        </TableRow>

        <TableRow
            android:gravity="center">
            <EditText
                android:layout_margin="1dp"
                android:id="@+id/join_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="닉네임"
                android:inputType="textPersonName" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="*" />
        </TableRow>

        <TableRow
            android:gravity="center">
            <!-- error message - nickname -->
            <TextView
                android:id="@+id/error_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/red_error"
                android:text="" />
        </TableRow>

        <TextView
            android:layout_margin="25sp" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="다음"
            android:ems="11"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout_id_pw" />
    </TableLayout>

</LinearLayout>