<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommunityActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/main_content02_title"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="start|bottom"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/banner"
        app:layout_constraintTop_toTopOf="@+id/banner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/community_title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="@font/thin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/community_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/regular" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_marginTop="160dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/article_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--            atricle component -->
<!--            <LinearLayout-->
<!--                android:id="@+id/btn_goToArticle"-->
<!--                android:clickable="true"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="12dp"-->
<!--                android:orientation="vertical"-->
<!--                android:gravity="start|center">-->
<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="start|center"-->
<!--                    android:orientation="horizontal"-->
<!--                    android:paddingHorizontal="30dp"-->
<!--                    android:weightSum="8">-->
<!--                    <de.hdodenhof.circleimageview.CircleImageView-->
<!--                        android:id="@+id/profile_imege"-->
<!--                        android:clickable="true"-->
<!--                        android:background="?attr/selectableItemBackgroundBorderless"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="60dp"-->
<!--                        android:layout_weight="1"-->
<!--                        android:src="@drawable/icon_user"-->
<!--                        app:civ_border_width="1dp"-->
<!--                        app:civ_border_color="@color/black" />-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_weight="7"-->
<!--                        android:gravity="start"-->
<!--                        android:paddingHorizontal="20dp"-->
<!--                        android:orientation="vertical">-->
<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:textSize="20sp"-->
<!--                            android:gravity="start|center"-->
<!--                            android:text="클클사우르스" />-->

<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:textSize="16sp"-->
<!--                            android:gravity="start|center"-->
<!--                            android:text="1분 전" />-->
<!--                    </LinearLayout>-->
<!--                </LinearLayout>-->

<!--                <ImageView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="300dp"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    android:paddingVertical="10dp"-->
<!--                    android:src="@drawable/img_meal_one" />-->
<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="1dp"-->
<!--                    android:background="@color/black_200"/>-->
            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:clickable="true"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="12dp"-->
<!--                android:orientation="vertical"-->
<!--                android:gravity="start|center">-->
<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="start|center"-->
<!--                    android:orientation="horizontal"-->
<!--                    android:paddingHorizontal="30dp"-->
<!--                    android:weightSum="8">-->
<!--                    <de.hdodenhof.circleimageview.CircleImageView-->
<!--                        android:id="@+id/article_profile_image"-->
<!--                        android:clickable="true"-->
<!--                        android:background="?attr/selectableItemBackgroundBorderless"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="60dp"-->
<!--                        android:layout_weight="1"-->
<!--                        android:src="@drawable/icon_user"-->
<!--                        app:civ_border_width="1dp"-->
<!--                        app:civ_border_color="@color/black" />-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_weight="7"-->
<!--                        android:gravity="start"-->
<!--                        android:paddingHorizontal="20dp"-->
<!--                        android:orientation="vertical">-->
<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:textSize="20sp"-->
<!--                            android:gravity="start|center"-->
<!--                            android:text="클숭이" />-->

<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:textSize="16sp"-->
<!--                            android:gravity="start|center"-->
<!--                            android:text="2시간 전" />-->
<!--                    </LinearLayout>-->
<!--                </LinearLayout>-->

<!--                <ImageView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="300dp"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    android:paddingVertical="10dp"-->
<!--                    android:src="@drawable/img_meal_two" />-->
<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="1dp"-->
<!--                    android:background="@color/black_200"/>-->
<!--            </LinearLayout>-->

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>